chore: cleaning up imports and collectors